fixed layout on ios and fixed bug on debug log view

--- a/sudoku/Styles/MainPage.css
+++ b/sudoku/Styles/MainPage.css
@@ -3,7 +3,7 @@
 }
 
 .Grid {
-    margin-top: 20;
+    
 }
 
 .cellEdit {
